--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Schichtkalender 2025</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="/manifest.json">
     </head>
 <body>
     <div class="calendar-container" id="calendarContainer">
