--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="calendar-container" id="calendarContainer">
         <i class="fas fa-phone-alt header-icon phone-icon-position" id="openPhoneDialog"></i>
         <i class="fas fa-info-circle header-icon info-icon-position" id="openShiftInfoDialog"></i>
-        <img src="/images/motherson-logo-full.png" alt="Motherson Logo" class="logo" id="openSettingsDialog">
+        <img src="https://motherson.com/sites/all/themes/motherson/logo.png" alt="Motherson Logo" class="logo" id="openSettingsDialog">
         <div class="header-section">
             <h1 id="currentYearDisplay">2025</h1>
         </div>
