--- a/Schichtkalender-PWA/index.html
+++ b/Schichtkalender-PWA/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="/manifest.json">
-    </head>
+</head>
 <body>
     <div class="calendar-container" id="calendarContainer">
         <i class="fas fa-phone-alt header-icon phone-icon-position" id="openPhoneDialog"></i>
         <i class="fas fa-info-circle header-icon info-icon-position" id="openShiftInfoDialog"></i>
-        <img src="/images/motherson-logo-full.png" alt="Motherson Logo" class="logo" id="openSettingsDialog">
+        <img src="https://motherson.com/sites/all/themes/motherson/logo.png" alt="Motherson Logo" class="logo" id="openSettingsDialog">
         <div class="header-section">
             <h1 id="currentYearDisplay">2025</h1>
         </div>
