--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <meta name="theme-color" content="#0161FD">
 </head>
 <body>
+    <script src="script.js"></script>
+</body>
+</html>
+<body>
     <div class="calendar-container" id="calendarContainer">
         <i class="fas fa-phone-alt header-icon phone-icon-position" id="openPhoneDialog"></i>
         <i class="fas fa-info-circle header-icon info-icon-position" id="openShiftInfoDialog"></i>
