--- a/index.html
+++ b/index.html
@@ -16,12 +16,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#0161FD">
 </head>
-<body>
-    <script src="script.js"></script>
-</body>
-</html>
-<body>
-    <div class="calendar-container" id="calendarContainer">
+<body> <div class="calendar-container" id="calendarContainer">
         <i class="fas fa-phone-alt header-icon phone-icon-position" id="openPhoneDialog"></i>
         <i class="fas fa-info-circle header-icon info-icon-position" id="openShiftInfoDialog"></i>
         <img src="https://images.seeklogo.com/logo-png/54/2/motherson-logo-png_seeklogo-544537.png" alt="Motherson Logo" class="logo" id="openSettingsDialog">
@@ -126,6 +121,5 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
-</body>
+    <script src="script.js"></script> </body>
 </html>
