--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Schichtkalender 2025</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="style.css"> <link rel="manifest" href="manifest.json">
     <link rel="apple-touch-icon" href="ios/192.png">
     <link rel="apple-touch-icon" sizes="180x180" href="ios/180.png">
     <link rel="apple-touch-icon" sizes="192x192" href="ios/192.png">
@@ -14,8 +13,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="ios/16.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="theme-color" content="#0161FD">
-</head>
+    <meta name="theme-color" content="#0161FD"> </head>
 <body>
     <div class="calendar-container" id="calendarContainer">
         <i class="fas fa-phone-alt header-icon phone-icon-position" id="openPhoneDialog"></i>
@@ -103,8 +101,7 @@
             </div>
             <div class="settings-option">
                 <label for="borderColorPicker">Randfarbe wählen:</label>
-                <input type="color" id="borderColorPicker" value="#0161FD">
-            </div>
+                <input type="color" id="borderColorPicker" value="#0161FD"> </div>
         </div>
     </div>
 
@@ -122,6 +119,5 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
-</body>
+    <script src="script.js"></script> </body>
 </html>
