--- a/index.html
+++ b/index.html
@@ -2,33 +2,22 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Schichtkalender 2025</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="manifest" href="/manifest.json">
-<script>
-    if ('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-            navigator.serviceWorker.register('/service-worker.js')
-                .then(registration => {
-                    console.log('Service Worker registered with scope:', registration.scope);
-                })
-                .catch(error => {
-                    console.error('Service Worker registration failed:', error);
-                });
-        });
-    }
-</script>
-
+    <link rel="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" sizes="180x180" href="ios/180.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="ios/152.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="ios/167.png">
 </head>
 <body>
     <div class="calendar-container" id="calendarContainer">
-        <div class="calendar-header">
-            <i class="fas fa-phone-alt icon-button" id="openPhoneDialog"></i>
-            <i class="fas fa-info-circle icon-button" id="openShiftInfoDialog"></i>
+        <i class="fas fa-phone-alt header-icon phone-icon-position" id="openPhoneDialog"></i>
+        <i class="fas fa-info-circle header-icon info-icon-position" id="openShiftInfoDialog"></i>
+        <img src="https://images.seeklogo.com/logo-png/54/2/motherson-logo-png_seeklogo-544537.png" alt="Motherson Logo" class="logo" id="openSettingsDialog">
+        <div class="header-section">
             <h1 id="currentYearDisplay">2025</h1>
-            <img src="https://images.seeklogo.com/logo-png/54/2/motherson-logo-png_seeklogo-544537.png" alt="Motherson Logo" class="logo" id="openSettingsDialog">
         </div>
         <h2>Schichtkalender Schicht 2</h2>
         <div class="month-grid">
@@ -36,7 +25,7 @@
     </div>
 
     <div class="dialog-overlay" id="phoneDialogOverlay">
-        <div class="dialog-content">
+        <div class="dialog">
             <button class="close-button" id="closePhoneDialog">&times;</button>
             <h3>Wichtige Telefonnummern</h3>
             <ul>
@@ -61,7 +50,7 @@
     </div>
 
     <div class="dialog-overlay" id="holidayDialogOverlay">
-        <div class="dialog-content">
+        <div class="dialog">
             <button class="close-button" id="closeHolidayDialog">&times;</button>
             <h3>Feiertag</h3>
             <div id="holidayTranslations"></div>
@@ -69,66 +58,90 @@
     </div>
 
     <div class="dialog-overlay" id="shiftInfoDialogOverlay">
-        <div class="dialog-content">
+        <div class="dialog">
             <button class="close-button" id="closeShiftInfoDialog">&times;</button>
             <h3>Schichtzeiten & Farben</h3>
             <div class="shift-info-item">
-                <div class="color-box fruehschicht-color"></div>
+                <div class="shift-color-box fruehschicht"></div>
                 <span>Frühschicht: 06:00 Uhr - 14:00 Uhr</span>
             </div>
             <div class="shift-info-item">
-                <div class="color-box spaetschicht-color"></div>
+                <div class="shift-color-box spaetschicht"></div>
                 <span>Spätschicht: 14:00 Uhr - 22:00 Uhr</span>
             </div>
             <div class="shift-info-item">
-                <div class="color-box nachtschicht-color"></div>
+                <div class="shift-color-box nachtschicht"></div>
                 <span>Nachtschicht: 22:00 Uhr - 06:00 Uhr</span>
             </div>
             <div class="shift-info-item">
-                <div class="color-box samstag"></div>
+                <div class="shift-color-box samstag"></div>
                 <span>Samstag</span>
             </div>
             <div class="shift-info-item">
-                <div class="color-box sonntag"></div>
+                <div class="shift-color-box sonntag"></div>
                 <span>Sonntag</span>
             </div>
             <div class="shift-info-item">
-                <div class="color-box feiertag"></div>
+                <div class="shift-color-box feiertag"></div>
                 <span>Feiertag</span>
             </div>
         </div>
     </div>
 
     <div class="dialog-overlay" id="settingsDialogOverlay">
-        <div class="dialog-content">
+        <div class="dialog">
             <button class="close-button" id="closeSettingsDialog">&times;</button>
             <h3>Einstellungen</h3>
-            <div class="setting-item">
+            <div class="settings-option">
                 <label for="toggleAnimations">Animationen ausschalten:</label>
                 <input type="checkbox" id="toggleAnimations">
             </div>
-            <div class="setting-item">
+            <div class="settings-option">
                 <label for="borderColorPicker">Randfarbe wählen:</label>
-                <input type="color" id="borderColorPicker" value="#0161FD">
-            </div>
+                <input type="color" id="borderColorPicker" value="#0161FD"> </div>
         </div>
     </div>
 
     <div class="dialog-overlay" id="yearInputDialogOverlay">
-        <div class="dialog-content year-input-dialog">
+        <div class="dialog year-input-dialog">
             <button class="close-button" id="closeYearInputDialog">&times;</button>
             <h3>Jahr auswählen</h3>
             <label for="yearInput">Geben Sie ein Jahr ein:</label>
-            <div class="year-input-control">
-                <button id="decreaseYear">-</button>
+            <div class="input-group">
+                <button class="year-nav" id="decreaseYear">-</button>
                 <input type="number" id="yearInput" min="2023" max="2030">
-                <button id="increaseYear">+</button>
+                <button class="year-nav" id="increaseYear">+</button>
             </div>
-            <button id="setYearButton">Bestätigen</button>
+            <button id="setYearButton" class="confirm-button">Bestätigen</button>
+        </div>
+    </div>
+
+    <div class="dialog-overlay" id="noteDialogOverlay">
+        <div class="dialog" id="noteDialog">
+            <button class="close-button" id="closeNoteDialog">&times;</button>
+            <h3 id="noteDialogTitle">Notiz für [Datum]</h3>
+            <textarea id="noteInput" placeholder="Hier Notizen eingeben..."></textarea>
+            <div class="button-group">
+                <button id="deleteNoteButton">Notiz löschen</button>
+                <button id="saveNoteButton">Notiz speichern</button>
+            </div>
         </div>
     </div>
 
     <script src="script.js"></script>
-
+    <script>
+        // Service Worker Registrierung (wenn du ihn verwenden möchtest)
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/worker.js')
+                    .then(registration => {
+                        console.log('Service Worker registriert mit Scope:', registration.scope);
+                    })
+                    .catch(error => {
+                        console.log('Service Worker Registrierung fehlgeschlagen:', error);
+                    });
+            });
+        }
+    </script>
 </body>
 </html>
