--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Schichtkalender 2025</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
     <link rel="apple-touch-icon" sizes="180x180" href="ios/180.png">
     <link rel="apple-touch-icon" sizes="152x152" href="ios/152.png">
-    <link rel="apple-touch-icon" sizes="167x167" href="ios/167.png"></head>
+    <link rel="apple-touch-icon" sizes="167x167" href="ios/167.png">
+</head>
 <body>
     <div class="calendar-container" id="calendarContainer">
         <i class="fas fa-phone-alt header-icon phone-icon-position" id="openPhoneDialog"></i>
