--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <meta name="theme-color" content="#DeineHintergrundfarbe"> 
+    <meta name="theme-color" content="#f4f4f4">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>Schichtkalender 2025</title>
+    <title>Schichtkalender</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
@@ -18,6 +18,7 @@
     <div class="calendar-container" id="calendarContainer">
         <i class="fas fa-phone-alt header-icon phone-icon-position" id="openPhoneDialog"></i>
         <i class="fas fa-info-circle header-icon info-icon-position" id="openShiftInfoDialog"></i>
+        <i class="fas fa-calendar-day header-icon today-icon-position" id="todayButton"></i>
         <img src="https://images.seeklogo.com/logo-png/54/2/motherson-logo-png_seeklogo-544537.png" alt="Motherson Logo" class="logo" id="openSettingsDialog">
         <div class="header-section">
             <h1 id="currentYearDisplay">2025</h1>
@@ -101,7 +102,16 @@
             </div>
             <div class="settings-option">
                 <label for="borderColorPicker">Randfarbe wählen:</label>
-                <input type="color" id="borderColorPicker" value="#0161FD"> </div>
+                <input type="color" id="borderColorPicker" value="#0161FD">
+            </div>
+            <div class="settings-option">
+                <label for="toggleAutoDarkMode">Automatischer Dark Mode:</label>
+                <input type="checkbox" id="toggleAutoDarkMode">
+            </div>
+            <div class="settings-option">
+                <label for="toggleDarkMode">Dark Mode aktivieren:</label>
+                <input type="checkbox" id="toggleDarkMode">
+            </div>
         </div>
     </div>
 
@@ -112,7 +122,7 @@
             <label for="yearInput">Geben Sie ein Jahr ein:</label>
             <div class="input-group">
                 <button class="year-nav" id="decreaseYear">-</button>
-                <input type="number" id="yearInput" min="2023" max="2030">
+                <input type="number" id="yearInput" min="2025" max="2030">
                 <button class="year-nav" id="increaseYear">+</button>
             </div>
             <button id="setYearButton" class="confirm-button">Bestätigen</button>
@@ -133,7 +143,6 @@
 
     <script src="script.js"></script>
     <script>
-        // Service Worker Registrierung (wenn du ihn verwenden möchtest)
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
                 navigator.serviceWorker.register('/worker.js')
