--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
 
     <div class="dialog-overlay" id="shiftInfoDialogOverlay">
-        <div class="dialog">
+        <div class="dialog shift-info-dialog">
             <button class="close-button" id="closeShiftInfoDialog">&times;</button>
             <h3>Schichtzeiten & Farben</h3>
             <div class="shift-info-item">
@@ -88,6 +88,13 @@
             <div class="shift-info-item">
                 <div class="shift-color-box feiertag"></div>
                 <span>Feiertag</span>
+            </div>
+
+            <hr class="info-divider">
+
+            <h3>Weitere Informationen</h3>
+            <div id="infoFilesList" class="info-files-list">
+                <p class="loading-message">Lade Informationen...</p>
             </div>
         </div>
     </div>
