--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
 </head>
 <body>
     <div class="calendar-container" id="calendarContainer">
-        <i class="fa-solid fa-phone-flip header-icon fa-beat phone-icon-position" id="openPhoneDialog"
-            style="--fa-animation-delay: 0.20s;"></i>
-        <i class="fa-regular fa-circle-info fa-beat header-icon info-icon-position" id="openShiftInfoDialog" style="--fa-animation-delay: 0.60s;"></i>
-        <i class="fa-solid fa-calendar-day header-icon fa-beat today-icon-position" id="todayButton"
-            style="--fa-animation-delay: 0.40s;"></i>
+        <span class="header-icon phone-icon-position beat-animation" id="openPhoneDialog"
+            style="--fa-animation-delay: 0.20s;">📞</span>
+        <span class="header-icon info-icon-position beat-animation" id="openShiftInfoDialog" style="--fa-animation-delay: 0.60s;">ℹ️</span>
+        <span id="todayButton" class="header-icon today-icon-position beat-animation" style="--fa-animation-delay: 0.40s;">🗓️</span>
         <img src="https://images.seeklogo.com/logo-png/54/2/motherson-logo-png_seeklogo-544537.png" alt="Motherson Logo" class="logo" id="openSettingsDialog">
         <div class="header-section">
             <h1 id="currentYearDisplay">2025</h1>
